# Alpha_Nexus

./: .gitignore  AGENTS.md  PLAN.md  README.md  alphanexus-daemon.service  command.txt  deploy.sh  example.env  info.txt
data_pipeline/: backtest_wallets.py  candidates.txt  requirements.txt  test_backtest_wallets.py  update_whitelist.py
rust_daemon/: Cargo.toml  trade_telemetry.db
rust_daemon/.cargo/: config.toml
rust_daemon/src/: config.rs  db.rs  error.rs  execution.rs  exits.rs  main.rs  redis_client.rs  shadow_logger.rs  state.rs  telegram.rs  types.rs  utils.rs  websocket.rs
