[package]
name = "alphanexus-daemon"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
solana-client = "1.18"
solana-sdk = "1.18"
bincode = "1.3"
base64 = "0.21"
thiserror = "1.0"
